[metadata]
name = PulsePortraiture
description = Data analysis package for wideband pulsar timing
author = Tim Pennucci
author_email = tim.pennucci@nanograv.org
url = http://github.com/pennucci/PulsePortraiture
# project_urls =
#    Documentation = 
license = License :: GNU General Public License v3.0
classifier =
    Intended Audience :: Science/Research
    License :: GNU General Public License v3.0
    Operating System :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
packages = find:
package_dir = 
include_package_data = True
python_requires = >=3.8
install_requires =
    numpy
    scipy
    matplotlib
    PyWavelets
    lmfit

[options.packages.find]
where = .

[options.package_data]
* = *.*

[bdist_wheel]
universal = 0

statistics = True
rst-roles =
    class,
    module,
    func,

[versioneer]
VCS = git
style = pep440
versionfile_source = PulsePortraiture/_version.py
versionfile_build = PulsePortraiture/_version.py
tag_prefix =
parentdir_prefix = PulsePortraiture-